Render computer board with click event to capture coords.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <h1>Battleship</h1>
-    <div class="board-1"></div>
+    <div class="wrapper">
+      <div>Player 1</div>
+      <div class="board-1"></div>
+      <div>Computer</div>
+      <div class="board-2"></div>
+    </div>
   </body>
 </html>
