Attack computer waters on click event and colour result.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <h1>Battleship</h1>
     <div class="wrapper">
-      <div>Player 1</div>
+      <div>Friendly Waters</div>
       <div class="board-1"></div>
-      <div>Computer</div>
+      <div>Enemy Waters</div>
       <div class="board-2"></div>
     </div>
   </body>
