--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       <div class="board-1"></div>
       <div>Enemy Waters</div>
       <div class="board-2"></div>
+      <dialog>
+        <legend></legend>
+        <div>
+          <button value="cancel" id="cancel" formmethod="dialog">Cancel</button>
+          <button id="confirm" value="default">Confirm</button>
+        </div>
+      </dialog>
     </div>
   </body>
 </html>
