Add gameboard of player1 to modal with basic style.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="board-2"></div>
       <dialog>
         <legend></legend>
+        <div class="modal-board"></div>
         <div>
           <button value="cancel" id="cancel" formmethod="dialog">Cancel</button>
           <button id="confirm" value="default">Confirm</button>
