--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
               <li>
                 <label for="row">Row</label>
                 <select id="row" name="row">
-                  <option value="row1">Row 1</option>
-                  <option value="row2">Row 2</option>
-                  <option value="row3">Row 3</option>
-                  <option value="row4">Row 4</option>
-                  <option value="row5">Row 5</option>
-                  <option value="row6">Row 6</option>
-                  <option value="row7">Row 7</option>
-                  <option value="row8">Row 8</option>
-                  <option value="row9">Row 9</option>
-                  <option value="row10">Row 10</option>
+                  <option value="0">Row 1</option>
+                  <option value="1">Row 2</option>
+                  <option value="2">Row 3</option>
+                  <option value="3">Row 4</option>
+                  <option value="4">Row 5</option>
+                  <option value="5">Row 6</option>
+                  <option value="6">Row 7</option>
+                  <option value="7">Row 8</option>
+                  <option value="8">Row 9</option>
+                  <option value="9">Row 10</option>
                 </select>
               </li>
               <li>
@@ -53,7 +53,7 @@
               <li>
                 <label for="dir">Direction</label>
                 <select id="dir" name="dir">
-                  <option value="h">Horizontal</option>
+                  <!-- <option value="h">Horizontal</option> -->
                   <option value="v">Vertical</option>
                 </select>
               </li>
