Update number of enemy ships and friendly ship size placement.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <dialog>
         <form action="">
           <fieldset>
-            <legend>Place Your Battleships</legend>
+            <legend>Place Your Battleship</legend>
             <div class="modal-board"></div>
             <ul>
               <li>
